# duplicateFinder

./: .gitignore  LICENSE  README.md  RELEASES.md  duplicate_finder.py  package-lock.json  package.json  requirements.txt
docs/: technical-architecture.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
