[package]
name = "duplicate-finder"
version = "1.0.0"
edition = "2021"

[lib]
name = "duplicate_finder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
rayon = "1.10"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp", "ico"] }
base64 = "0.22"
trash = "5"
tokio = { version = "1", features = ["sync"] }
